force-app/main/default/objects/Change_Story_List__c/Change_Story_List__c.object-meta.xml
<CustomObject>
    <label>Change Story List</label>
    <nameField>
        <displayFormat>CSL-{000000}</displayFormat>
        <label>Change Story List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Stories List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>