force-app/main/default/objects/Change_Story_List__c/fields/Change_Story__c.field-meta.xml
<CustomField>
    <fullName>Change_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Change Story</label>
    <referenceTo>Change_Story__c</referenceTo>
    <relationshipLabel>Change Stories List</relationshipLabel>
    <relationshipName>Change_Stories_List</relationshipName>
    <type>Lookup</type>
</CustomField>