force-app/main/default/objects/Change_Story_List__c/fields/Issue_Link_ID__c.field-meta.xml
<CustomField>
    <fullName>Issue_Link_ID__c</fullName>
    <label>Issue Link ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>