force-app/main/default/objects/Change_Story_List__c/fields/User_Story__c.field-meta.xml
<CustomField>
    <fullName>User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Story</label>
    <referenceTo>copado__User_Story__c</referenceTo>
    <relationshipLabel>Change Stories List</relationshipLabel>
    <relationshipName>Change_Stories_List</relationshipName>
    <type>Lookup</type>
</CustomField>